fix memory leak

--- a/source/slow-mo.ipynb
+++ b/source/slow-mo.ipynb
@@ -319,7 +319,11 @@
     "                            endpoint_name=endpoint_name, \n",
     "                            instance_type=\"ml.g5.4xlarge\", \n",
     "                            sagemaker_session=sagemaker_session,\n",
-    "                            env={\"PREDICT_TIMEOUT\": \"3600\", \"MODEL_LOADING_TIMEOUT\": \"3600\"},\n",
+    "                            env={\n",
+    "                                'SERVING_MAX_REQUEST_SIZE': '1000000000',\n",
+    "                                \"PREDICT_TIMEOUT\": \"3600\", \n",
+    "                                \"MODEL_LOADING_TIMEOUT\": \"3600\"\n",
+    "                            },\n",
     "                            async_inference_config=async_config)"
    ]
   },
@@ -487,7 +491,6 @@
    "outputs": [],
    "source": [
     "from IPython.display import Video\n",
-    "\n",
     "Video(SAMPLE_VIDEO, width=640, height=360)"
    ]
   },
@@ -540,7 +543,7 @@
     "  \"align\": 64,\n",
     "  \"block_height\": 1, \n",
     "  \"block_width\": 1,\n",
-    "  \"time_to_interpolate\": 2  \n",
+    "  \"time_to_interpolate\": 2 \n",
     "}\n",
     "\n",
     "with open(f\"{frame_dir}/config.json\", \"w\") as f:\n",
@@ -724,20 +727,12 @@
     "\n",
     "helper.create_video(output_frames, #slow-mo frames\n",
     "                    ouput_video,   #generated video\n",
-    "                    fr=25)         #frame rate of the video\n",
+    "                    fr=2)         #frame rate of the video\n",
     " \n",
     "time.sleep(5)\n",
     "\n",
     "Video(ouput_video, width=640, height=360)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f58c3f4-9b62-487d-a466-8724d772bf85",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
